# BCF-Software-Recruitment-Task

./: .gitignore  CMakeLists.txt  randomtreefilegenerator.py
include/: Directory.hpp  DirectoryStatistics.hpp  File.hpp  ThreadPool.hpp
src/: DirectoryStatistics.cpp  ThreadPool.cpp  main.cpp
tests/: btest0.cpp  btest1.cpp  btest2.cpp  btest3.cpp  btest4.cpp  btest5.cpp  test0.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
tests/test_directory_0/: 65_words_253_letters_6_lines_3_empty.txt
tests/test_directory_0/dir1/: 1_word_2_lines.txt  91_words_467_letters_6_lines_1_empty.txt
tests/test_directory_1/: 3.txt  Ind.txt  ch.txt  diumun.txt  dracto.txt  examon.txt  of.txt  porthe.txt  so.txt  thasit.txt  wort.txt
tests/test_directory_1/06H3LR0/: Fralk.txt  mar.txt  of.txt
tests/test_directory_1/06H3LR0/SDG20E/: Man.txt
tests/test_directory_1/3K59TSM/: Could.txt  gand.txt  gre.txt  hinfro.txt  sourne.txt  étatin.txt
tests/test_directory_1/3K59TSM/QOUVZ/: are.txt  torall.txt
tests/test_directory_1/63RX2PYT/: Bahe.txt  beakhi.txt
tests/test_directory_1/6Q1K1Q9L1/: In.txt  May.txt  a.txt  hand.txt  mia.txt  petion.txt  theive.txt  to.txt
tests/test_directory_1/6Q1K1Q9L1/0R975NQE/: corips.txt  pearec.txt
tests/test_directory_1/6Q1K1Q9L1/0YJP7E9/: A.txt
tests/test_directory_1/6Q1K1Q9L1/2APBLA/: a.txt  austro.txt  sycher.txt
tests/test_directory_1/6Q1K1Q9L1/33AKII/: 8025.txt  Dans.txt  Emperr.txt  Porm.txt  an.txt  out.txt
tests/test_directory_1/6Q1K1Q9L1/8YK8XE/: The.txt  do.txt  th.txt  thaver.txt
tests/test_directory_1/6Q1K1Q9L1/9DMV1/: 19942.txt
tests/test_directory_1/6Q1K1Q9L1/QW0V9H36S/: Arcy.txt  Ave.txt  Gertat.txt  ent.txt  theres.txt
tests/test_directory_1/6Q1K1Q9L1/T53A98/: His.txt  agenal.txt  ing.txt
tests/test_directory_1/6Q1K1Q9L1/U4JSE/: of.txt  the.txt  widest.txt  wor.txt
tests/test_directory_1/6Q1K1Q9L1/ZZCRQ/: Ame.txt  as.txt  beind.txt  bilice.txt  poseal.txt  witer.txt
tests/test_directory_1/CSE3WG/: of.txt  th.txt
tests/test_directory_1/I5Z65D/: amest.txt  cludeg.txt  coname.txt  med.txt  othe.txt  ween.txt
tests/test_directory_1/I5Z65D/1OIG0EY89/: cal.txt  rhas.txt  the.txt
tests/test_directory_1/I5Z65D/4BS5VKE34S/: a.txt  beds.txt  cooll.txt  etwome.txt  mal.txt  muntre.txt  the.txt
tests/test_directory_1/I5Z65D/58K21WOY60/: The.txt  me.txt  whoted.txt
tests/test_directory_1/I5Z65D/7I7Y2DG/: Ben.txt  Revive.txt  a.txt  antent.txt  gend.txt  ted.txt  which.txt
tests/test_directory_1/I5Z65D/7IVIQ/: ing.txt  intor.txt  slecea.txt
tests/test_directory_1/I5Z65D/97YGSJNP/: Suble.txt  porn.txt  was.txt
tests/test_directory_1/I5Z65D/ARK2ZNI/: Wish.txt  cif.txt
tests/test_directory_1/I5Z65D/EZBP3NV4/: counta.txt  tring.txt
tests/test_directory_1/I5Z65D/HCINM/: of.txt
tests/test_directory_1/I5Z65D/M1Q3OMPQ/: heated.txt  theirg.txt
tests/test_directory_1/I5Z65D/TBNIM3J/: Mustud.txt  ary.txt  croman.txt  ism.txt  lation.txt  pres.txt  thwed.txt  witiff.txt
tests/test_directory_1/I5Z65D/WYYIKZ/: emice.txt  sery.txt
tests/test_directory_1/JXPZQ7/: dicoyd.txt
tests/test_directory_1/LW3Z515K/: Largen.txt  Roscie.txt  cogre.txt  existe.txt  mated.txt  pulach.txt
tests/test_directory_1/LW3Z515K/1GKI6W2K/: ispica.txt
tests/test_directory_1/LW3Z515K/D8KCW5V/: Mal.txt  thess.txt
tests/test_directory_1/LW3Z515K/F672FA/: in.txt  latto.txt
tests/test_directory_1/LW3Z515K/HN8LRX0/: lion.txt  na.txt  sintio.txt  theot.txt
tests/test_directory_1/LW3Z515K/NPJOJT0J/: and.txt  in.txt  of.txt
tests/test_directory_1/LW3Z515K/OA4LQS/: sions.txt
tests/test_directory_1/LW3Z515K/P5GLREOX/: 2.txt  imatim.txt  in.txt  ing.txt  of.txt
tests/test_directory_1/LW3Z515K/RABTL/: Cate.txt  The.txt  ance.txt  ant.txt  clever.txt  forth.txt  serf.txt  showee.txt
tests/test_directory_1/LW3Z515K/VPBF1AIHAT/: Derse.txt  ahaten.txt  heatit.txt  plaw.txt  to.txt
tests/test_directory_1/M9EMX7PQE0/: ch.txt  d.txt  mis.txt  spon.txt  und.txt  yeatin.txt
tests/test_directory_1/M9EMX7PQE0/3NJRNLJ2/: Ame.txt  Its.txt  Quéné.txt  lock.txt
tests/test_directory_1/M9EMX7PQE0/XT8JUIDOF/: Eurals.txt
tests/test_directory_1/MD0GYTQLH/: Wittad.txt  al.txt  sen.txt  therri.txt
tests/test_directory_1/MD0GYTQLH/8IHOE3D/: arldis.txt
tests/test_directory_1/MD0GYTQLH/B86H7Z/: ar.txt
tests/test_directory_1/MD0GYTQLH/CDFDUGVK/: Moname.txt  greiro.txt  ore.txt  ve.txt
tests/test_directory_1/MD0GYTQLH/HIRB079S/: sless.txt
tests/test_directory_1/MD0GYTQLH/U91HRVK2XH/: wident.txt
tests/test_directory_1/NXOUWRW6DR/: cas.txt  the.txt
tests/test_directory_1/NXOUWRW6DR/41ZAM/: Ind.txt
tests/test_directory_1/NXOUWRW6DR/HF2X6WTPPG/: 200.txt  and.txt  thirea.txt
tests/test_directory_1/NXOUWRW6DR/M1JWPXVTKQ/: of.txt  pol.txt
tests/test_directory_1/O0P1M0T5/: Tomeru.txt  is.txt  of.txt  和.txt
tests/test_directory_1/O0P1M0T5/1JIL65/: Kinceo.txt  ce.txt
tests/test_directory_1/O0P1M0T5/1UHI8H4Y0/: atis.txt  lail.txt  ocommi.txt  pand.txt  soubür.txt
tests/test_directory_1/O0P1M0T5/47NLWS4N/: hand.txt  socith.txt  to.txt  tron.txt
tests/test_directory_1/O0P1M0T5/CR8Z17WZB6/: Alloca.txt  ficand.txt  is.txt  purren.txt  san.txt  to.txt  us.txt
tests/test_directory_1/O0P1M0T5/TIA8ZOH7PT/: compla.txt  ofurre.txt  theage.txt
tests/test_directory_1/O0P1M0T5/U5VFQQ0/: Int.txt  nallic.txt  relly.txt
tests/test_directory_1/RBAFTW9M/: Inial.txt  anden.txt  ations.txt  be.txt
tests/test_directory_1/VG6B1JJ/: bany.txt  th.txt  themed.txt  thre.txt  to.txt  ve.txt
(+670 files in other folders)
